--- a/requirements/dev.in
+++ b/requirements/dev.in
@@ -8,6 +8,6 @@ pep8-naming==0.13.3
 pip-audit==2.5.4
 pydantic==1.10.7  # Needed for importing the data model from the shared data model component
 pylint==2.17.2
-safety==2.3.5
+safety==2.4.0b1  # The beta of safety 2.4.0 fixes a dependency conflict with packaging 23.0.
 unittest-xml-reporting==3.2.0  # Needed to generate JUnit XML output for Sonarcloud.io
 vulture==2.7
